fix interest form display on iphone

--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -10749,7 +10749,6 @@ h1,
 }
 .show-interest #intro .form-container .dropdown-container {
   display: block;
-  padding: 10px;
 }
 .show-interest #intro .form-container .col-xs-8, .show-interest .membership #intro .form-container .membership-block-container, .membership .show-interest #intro .form-container .membership-block-container,
 .show-interest #intro .form-container .col-xs-3,
